--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>cloud-provider-payment</module>
         <module>cloud-consumer-order80</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <properties>
@@ -28,7 +29,7 @@
         <spring.cloud.alibaba.version>2.1.0.RELEASE</spring.cloud.alibaba.version>
         <!--        <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>-->
         <!--        <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>-->
-        <!--        <hutool-all.version>5.1.0</hutool-all.version>-->
+<!--        <hutool-all.version>5.8.20</hutool-all.version>-->
     </properties>
 
     <!-- 子模块继承之后，提供作用：锁定版本 + 子module不用谢groupId和version -->
