--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>cloud-provider-payment</module>
         <module>cloud-consumer-order80</module>
         <module>cloud-api-commons</module>
+        <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-provider-payment8002</module>
     </modules>
 
     <properties>
@@ -25,7 +28,7 @@
         <druid.version>1.1.16</druid.version>
         <druid.spring.boot.starter.version>1.2.19</druid.spring.boot.starter.version>
         <spring.boot.version>3.2.4</spring.boot.version>
-        <spring.cloud.version>Leyton</spring.cloud.version>
+        <spring.cloud.version>2023.0.1</spring.cloud.version>
         <spring.cloud.alibaba.version>2.1.0.RELEASE</spring.cloud.alibaba.version>
         <!--        <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>-->
         <!--        <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>-->
@@ -44,10 +47,11 @@
                 <scope>import</scope>
             </dependency>
             <!--spring cloud Hoxton.SR1-->
+            <!--改成最新版-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR1</version>
+                <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
