SpringCloud-42-Ribbon之手寫輪詢算法
改版：
Spring Cloud Netflix 3.0 以後 dependency已經沒有
spring-cloud-starter-netflix-ribbon。
改成使用spring-cloud-starter-loadbalancer

--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -18,6 +18,10 @@
 <!--            <artifactId>spring-cloud-starter-zipkin</artifactId>-->
 <!--        </dependency>-->
         <dependency><!-- 引用自己定义的api通用包，可以使用Payment支付Entity -->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <dependency><!-- 引用自己定义的api通用包，可以使用Payment支付Entity -->
             <groupId>com.chunping.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
             <version>${project.version}</version>
