--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-consumer-feign-order80</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
 
     <properties>
@@ -32,7 +34,7 @@
         <spring.cloud.alibaba.version>2.1.0.RELEASE</spring.cloud.alibaba.version>
         <!--        <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>-->
         <!--        <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>-->
-<!--        <hutool-all.version>5.8.20</hutool-all.version>-->
+        <hutool-all.version>5.8.27</hutool-all.version>
     </properties>
 
     <!-- 子模块继承之后，提供作用：锁定版本 + 子module不用谢groupId和version -->
@@ -84,16 +86,21 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.spring.boot.starter.version}</version>
             </dependency>
-            <!--            <dependency>-->
-            <!--                <groupId>org.mybatis.spring.boot</groupId>-->
-            <!--                <artifactId>mybatis-spring-boot-starter</artifactId>-->
-            <!--                <version>${mybatis-spring-boot-starter.version}</version>-->
-            <!--            </dependency>-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>{hutool-all.version}</version>
+            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>org.mybatis.spring.boot</groupId>-->
+            <!--                <artifactId>mybatis-spring-boot-starter</artifactId>-->
+            <!--                <version>${mybatis-spring-boot-starter.version}</version>-->
+            <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
