--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>cloud-provider-payment8002</module>
         <module>cloud-consumer-feign-order80</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-center3344</module>
+        <module>cloud-config-client-3355</module>
     </modules>
 
     <properties>
