--- a/cloud-config-center3344/src/main/resources/application.yml
+++ b/cloud-config-center3344/src/main/resources/application.yml
@@ -21,3 +21,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
+
+#暴露监控端点 rabbitmq相關配置，暴露bus刷新配置的端點
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "bus-refresh"
