--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>cloud-gateway-gateway9527</module>
         <module>cloud-config-center3344</module>
         <module>cloud-config-client-3355</module>
+        <module>cloud-config-client-3366</module>
     </modules>
 
     <properties>
