--- a/seata-order-service2001/src/main/resources/application.yml
+++ b/seata-order-service2001/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 server:
-  port: 8002
+  port: 2001
 
 spring:
   application:
-    name: cloud-payment-service
+    name: seata-order-service
+  cloud:
+    alibaba:
+      seata:
+        # 自定义事务组名称需要与seata-server中的对应
+        tx-service-group: fsp_tx_group
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
   datasource:
+#    # 当前数据源操作类型
+#    type: com.alibaba.druid.pool.DruidDataSource
     # mysql驱动类
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/seata_order?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
@@ -19,6 +29,11 @@ spring:
         generate_statistics: true
         hbm2ddl:
           auto: update
+        dialect: org.hibernate.dialect.MySQL8Dialect
+logging:
+  level:
+    io:
+      seata: info
 
 eureka:
   client:
@@ -27,11 +42,5 @@ eureka:
     #是否从EurekaServer抓取已有的注册消息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      #集群版
-      #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
-      #单机版
-      defaultZone: http://eureka7001.com:7001/eureka/
-  instance:
-    instance-id: payment002
-#    prefer-ip-address: true # 当调用getHostname获取实例的hostname时，返回ip而不是host名称
-#    ip-address: 127.0.0.1 # 指定自己的ip信息，不指定的话会自己寻找
+      #defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
