--- a/cloud-config-client-3366/src/main/resources/bootstrap.yml
+++ b/cloud-config-client-3366/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
-server:
-  port: 3366
+#server:
+#  port: 3366
 
 spring:
   application:
@@ -9,7 +9,7 @@ spring:
     config:
       label: master #分支名称
       name: config #配置文件名称
-      profile: prod #读取后缀名称 上诉3个综合就是 master分支上 config-dev.yml |  master分支上config-dev.yml的配置文件被讀取http://config-3344.com:3344/master/config
+      profile: prod_3366 #读取后缀名称 上诉3个综合就是 master分支上 config-prod_3366.yml |  master分支上config-dev.yml的配置文件被讀取http://config-3344.com:3344/master/config
       uri: http://localhost:3344
   rabbitmq:
     host: localhost
